add external styling

--- a/external-css/index.html
+++ b/external-css/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catopedia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <main>
         <h1>Your Web Page Title</h1>
 
-        <section>
+        <section class="section-margin">
             <h2>Siamese Cat</h2>
             <p>Lifespan: 15-20 years</p>
             <h3>Characteristics:</h3>
