add inline styling

--- a/inline-css/index.html
+++ b/inline-css/index.html
@@ -54,7 +54,7 @@
                 <li>Blue almond-shaped eyes</li>
                 <li>Short coat with a sleek appearance</li>
             </ul>
-            <p>The Persian cat is known for its calm and gentle temperament.</p>
+            <p style="color: #990000; font-size: 18px;">The Persian cat is known for its calm and gentle temperament.</p>
             <img src="https://media.istockphoto.com/id/1135793728/photo/white-persian-cats.jpg?s=612x612&w=0&k=20&c=UeroNOVgXc3wUrR_tIBhT1uH_iAoH_ZZo9I95_L-mqU="
                 alt="Persian Cat">
         </section>
